등록을 위한 검색

--- a/search.html
+++ b/search.html
@@ -236,7 +236,7 @@
         <div class="result">
             <p id="result">검색 결과</p>
         </div>
-        <button id="route" style="float: right;"> 경로 탐색</button>
+        <button id="select_btn" style="float: right;"> 설정하기</button>
     </main>
 </body>
 
