--- a/attend.html
+++ b/attend.html
@@ -10,7 +10,7 @@
             <input type="text" name = "attend"  required>
             <input type="submit" value="SFR-305의 참가완료 버튼">
 
-            <p>대부분의 브라우저는 폰트 사이즈의 기본값이 12pt, 16px, 1em, 100%</p>
+            <p>대부분의 브라우저는 폰트 사이즈의 기본값이 12pt, 16px, 1em, 100% 임</p>
             <p>px = pt / 0.75</p>
 
             <p>pt = px * 0.75 </p>
