페이지 추가

--- a/main.html
+++ b/main.html
@@ -171,17 +171,17 @@
               <input class="form-control me-2 border p-2 m-2" id="start" type="search" placeholder="출발지" aria-label="Search">
               <input class="form-control me-2 border p-2 m-2" id="end" type="search" placeholder="도착지" aria-label="Search">
             </div>
-            <button class="btn btn-outline-success col-md-1 my-1 p-4 ms-4 fs-6" type="button" id="input">조회</button>
+            <button class="btn btn-outline-success my-1 p-4 ms-4 fs-6" type="button" id="input">조회</button>
           </div>
         </form>
           <div  class="row justify-content-center text-center my-sm-5" >
             <div id="guide"></div>
         </div>
             
-        <div class="col-lg-8 col-md-8 position-relative px-md-2 px-sm-5 mx-auto">
+        <div class="col-lg-7 col-md-7 position-relative px-md-2 px-sm-5 mx-auto">
           <form class="d-flex justify-content-reverse align-items-center mt-4">
               <div class="ms-auto text-center">
-                <button class="btn btn-outline-success fs-6" type="submit">등록</button>
+                <button class="btn btn-outline-success fs-6" type="button" onClick="location.href='registration.html'">등록</button>
               </div>
           </form>
             <!--구인 글 목록-->
