--- a/myPage.html
+++ b/myPage.html
@@ -93,7 +93,7 @@
   <header>
     <!--메뉴바 밑 이미지 부분-->
     <div class="page-header min-height-400" style="background-image: url('./assets/image/city-profile.jpg');" loading="lazy">
-      <span class="mask bg-gradient-dark opacity-8"></span>
+      <span class="mask bg-gradient-dark opacity-7"></span>
     </div>
   </header>
 
@@ -102,7 +102,6 @@
   <div class="card card-body shadow-blur mx-3 mx-md-4 mt-n6 mb-4">
     <!-- START Testimonials w/ user image & text & info -->
     <section class="py-sm-7 py-5 position-relative">
-      <div class="container">
         <div class="row">
           <div class="col-12 mx-auto">
             <div class="col-lg-9 col-md-9 mt-4 z-index-2 position-relative px-md-2 px-sm-5 mx-auto">
@@ -115,9 +114,7 @@
               <hr width="100%" color="#B2B2B2" noshade />
               </div>
             </div>
-            <div class="row py-5">
-              <div class="col-lg-8 col-md-8 z-index-2 position-relative px-md-2 px-sm-5 mx-auto">
-                <div class="d-flex justify-content-between align-items-center mb-2">
+                <div class="col-md-8 m-auto d-flex justify-content-between align-items-center mb-2">
                   <!--사용자명 가져오기-->
                   <h3 class="mb-0" id="user_name">사용자명</h3>
                   <!-- Button trigger modal -->
@@ -125,13 +122,12 @@
                     정보 수정
                   </button>
                 </div>
-                <p class="text-lg mb-0" id="phone_number">
+                <p class="text-lg mb-0 col-md-8 m-auto" id="phone_number">
                   <!--전화번호 입력-->
                   <!--값은 임시로 다음과 같이 넣어두었으니 id값으로 받아와서 사용-->
                   전화번호:000-0000-0000
                 </p>
               </div>
-            </div>
             <div class="row py-5 mt-6">
               <div class="col-lg-8 col-md-8 z-index-2 position-relative px-md-2 px-sm-5 mx-auto">
                 <!--사용 테이블 임시-->
