--- a/detail-info.html
+++ b/detail-info.html
@@ -99,7 +99,7 @@
                         날짜 <input type="text" id="datePicker" class="form-control-plaintext border p-2 mt-1 mb-3" readonly>
                         시간 <input type="text" class="form-control-plaintext border p-2 mt-1 mb-3" readonly>
                         예상가격 (1인당) <input class="form-control-plaintext border p-2 mt-1 mb-3" type="text" readonly>
-                        상세설명 <textarea class="form-control-plaintext border p-2 mt-1 mb-3" id="floatingTextarea2" style="height: 12rem" readonly></textarea>
+                        상세설명 <textarea class="form-control-plaintext border p-2 mt-1 mb-3" id="floatingTextarea2" style="height: 12rem; resize: none;" readonly></textarea>
                         <div class="d-flex justify-content-end mt-5">
                             <p class="pt-2">1/4</p>
                             <button class="btn btn-primary col-lg-2 col-md-2 col-5 ms-3 fs-6" type="button" id="join">참가</button>
